add index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="viewport">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -12,36 +12,40 @@
 
 <body>
 
-  <header>
+  <header class="title">
     <h1>Título</h1>
   </header>
 
-  <main>
-    <h2>Titular de la noticia</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, incidunt illo nostrum, similique labore
-      animi quo, eveniet maxime culpa beatae dolorum rem rerum dolor consequuntur! Fugit quam nam tempore dicta!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, veniam et voluptatem voluptatibus voluptatum
-      aliquam beatae ex. Tempore laborum alias earum magnam, pariatur consectetur voluptates, sapiente, optio maiores
-      nulla labore!</p>
+  <main class="main">
+    <div class="principal-container">
+      <h2>Titular de la noticia</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, incidunt illo nostrum, similique
+        labore
+        animi quo, eveniet maxime culpa beatae dolorum rem rerum dolor consequuntur! Fugit quam nam tempore dicta!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, veniam et voluptatem voluptatibus voluptatum
+        aliquam beatae ex. Tempore laborum alias earum magnam, pariatur consectetur voluptates, sapiente, optio maiores
+        nulla labore!</p>
+    </div>
+    <aside class="aside">
+      <h2>Categorías</h2>
+      <ul>
+        <li>Noticias de deporte</li>
+        <li>Noticias de ocio</li>
+        <li>Noticias de política</li>
+        <li>Noticias de espectáculos</li>
+      </ul>
+      <h2>Otras cosas</h2>
+      <ul>
+        <li>Nosequé</li>
+        <li>Nosecuánto</li>
+        <li>Talycual</li>
+      </ul>
+    </aside>
   </main>
 
-  <aside>
-    <h2>Categorías</h2>
-    <ul>
-      <li>Noticias de deporte</li>
-      <li>Noticias de ocio</li>
-      <li>Noticias de política</li>
-      <li>Noticias de espectáculos</li>
-    </ul>
-    <h2>Otras cosas</h2>
-    <ul>
-      <li>Nosequé</li>
-      <li>Nosecuánto</li>
-      <li>Talycual</li>
-    </ul>
-  </aside>
 
-  <footer>
+
+  <footer class="footer">
     <p>Texto del footer</p>
   </footer>
 
